--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Home page</title>
 </head>
 <body>
     <p>Home page</p>
+    <p th:text="'hello ' + ${user}">Marcin</p>
 </body>
 </html>
